Shenandoah: assert(mem == __null) failed: only one safepoint

XMLWordPrintable

    • gc
    • b10
    • Verified

        (synopsis is provisional, please change as you see fit)

        java/net/httpclient/whitebox/Http1HeaderParserTestDriver.java fails intermittently with Shenandoah:

        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/home/shade/trunks/jdk-jdk/src/hotspot/share/gc/shenandoah/c2/shenandoahSupport.cpp:2312), pid=30616, tid=30642
        # assert(mem == __null) failed: only one safepoint

        Steps to reproduce:

        $ for I in `seq 1 20`; do CONF=linux-x86_64-server-fastdebug make images run-test TEST=java/net/httpclient/whitebox/Http1HeaderParserTestDriver.java TEST_VM_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC"; done

        Bisection says it started happening after JDK-8234049, so probably something had changed in the code shape there.

          1. replay_pid11887.log
            239 kB
            Aleksey Shipilev
          2. hs_err_pid11887.log
            442 kB
            Aleksey Shipilev

              Assignee:
              Roland Westrelin
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: