8237837: Shenandoah: assert(mem == __null) failed: only one safepoint

Reviewed-by: rkennke